tests/error/inout_errors/nonlinear_callable.err
Error: Invalid annotation (at $FILE:12:26)
   | 
10 | 
11 | @guppy.declare(module)
12 | def foo(f: Callable[[int @owned], None]) -> None: ...
   |                           ^^^^^ Classical type `int` cannot be owned

Guppy compilation failed due to 1 previous error
